Including docker compose configuration